#10 Fix table scrolling and layout problem when long result.

--- a/src/main/webapp/css/ContentView.css
+++ b/src/main/webapp/css/ContentView.css
@@ -34,51 +34,31 @@
     height: 100%;
     margin: 10px;
 }
-.ContentView .search-result .table tr {
-    border-bottom: 1px solid #dddddd;;
-}
 
 
-.ContentView .search-result .table thead.fixedHeader tr {
-    position: relative;
+.ContentView .search-result .tableHeader, .ContentView .search-result .tableBody{
     display: block;
-    border-bottom: 1px solid #dddddd;;
+    width: 100%;
+
 }
 
-
-.ContentView .search-result .table thead.fixedHeader th {
-    font-weight: normal;
-    padding: 4px 10px;
-    text-align: left;
+.ContentView .search-result .table .tableBody{
+    height: 400px;
+    overflow:auto;
 }
 
-.ContentView .search-result .table  tr td, .ContentView .search-result .table  tr th{
-    width: 300px;
+.ContentView .search-result .table .row{
+    display: table-row;
+    width: 100%;
+    height: 30px;
+
+}
+
+.ContentView .search-result .table .row>div{
+    display: table-cell;
     overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-}
-
-
-
-
-
-.ContentView .search-result .table tbody.scrollContent {
-    display: block;
-    height: 100%;
-    overflow-y: scroll;
-    width: 100%
-}
-
-
-.ContentView .search-result .table tbody.scrollContent tr {
+    width: 33.3333%;
     border-bottom: 1px solid #dddddd;
-    display: block;
-}
-
-.ContentView .search-result .table tbody.scrollContent tr td {
-    border:none;
-    display: block;
 }
 
 
